projects/aequitas/gateway_repo_service/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
  namespace: aequitas-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: registry.coherent.in/acs-gatewayms:2
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: gateway
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            failureThreshold: 30
            periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
