projects/aequitas/gateway_repo_service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway-svc
  namespace: aequitas-dev
spec:
  ports:
    - port: 8090
      protocol: TCP
      targetPort: 8090
  selector:
    app: customer
